# sniffr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json
.github/workflows/: ci.yml
src/: capture.rs  display.rs  main.rs  packet.rs  parser.rs  stats.rs
