[package]
name = "tshark-clone"
version = "0.1.0"
edition = "2021"
authors = ["tshark-clone contributors"]
description = "A modern, user-friendly alternative to tshark written in Rust"
license = "MIT"
repository = "https://github.com/pallab-js/tshark-clone"
keywords = ["packet", "capture", "network", "pcap", "tshark", "wireshark", "analysis"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pcap = "1.1"
byteorder = "1.5"
colored = "2.1"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
toml = "0.8"
httparse = "1.1"
dns-parser = "0.8"

[dev-dependencies]
